--- a/title-block.html
+++ b/title-block.html
@@ -1,57 +1,19 @@
 <header id="title-block-header">
-    $if(image)$
-    <style>
-    .overlay {
-      background-color: #212529;
-      opacity: 0.5;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    .hero {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background-image: url($image$);
-      background-size: cover;
-      background-position-y: center;
-      height: 200px;
-    }
-
-    h1.title {
-      position: relative;
-      color: white;
-    }
-    p.subtitle, p.author, p.date, div.abstract{
-      position: relative;
-      color: white;
-      clear: both;
-    }
-    </style>
-    <div class="overlay"></div>
-    <div class="hero">
-    $endif$
-    $if(title)$<h1 class="title">$title$</h1>$endif$
-    $if(subtitle)$
-    <p class="subtitle">$subtitle$</p>
-    $endif$
-    $for(author)$
-    <p class="author">$author$</p>
-    $endfor$
-    
-    $if(date)$
-    <p class="date">$date$</p>
-    $endif$
-    $if(abstract)$
-    <div class="abstract">
-    <div class="abstract-title">$abstract-title$</div>
-    $abstract$
-    </div>
-    $endif$
-    $if(image)$
-    </div>
-    $endif$
-    </header>
+  <!-- $if(title)$<h1 class="title">$title$</h1>$endif$ --> <!-- Title rendering removed -->
+  $if(subtitle)$
+  <p class="subtitle">$subtitle$</p>
+  $endif$
+  $for(author)$
+  <p class="author">$author$</p>
+  $endfor$
+  
+  $if(date)$
+  <p class="date">$date$</p>
+  $endif$
+  $if(abstract)$
+  <div class="abstract">
+  <div class="abstract-title">$abstract-tile$</div>
+  $abstract$
+  </div>
+  $endif$
+</header>
